fixed css for footer font and spacing

--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ a:hover {
 
 .footer {
     background: #f2f2f2;
-    padding: 15px;
+    padding: 5px;
+    margin: 0;
     position: absolute;
     left: 0;
     right:0;
@@ -128,7 +129,9 @@ a:hover {
     
   
 }
-
+.footer a {
+    color: #888282;
+}
 .footer li {
     display: inline;
     padding: 10px;
